search component done, data loaded

--- a/src/views/search/style.css
+++ b/src/views/search/style.css
@@ -1,18 +1,17 @@
 .search{
-    height: 100vh;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
     width: 100%;
 }
 
 .searchTop{
     align-items: flex-start;
-    justify-content: flex-start;
+    justify-content: center;
 
 }
 
-.serachCenter{
+.searchCenter{
     align-items: center;
     justify-content: center;
+    height: 100vh;
 }
